--- a/mythesis.tex
+++ b/mythesis.tex
@@ -626,7 +626,7 @@ p = -\frac{2}{\sqrt{3}}b\cos([\arccos(3\sqrt{3}\rg/(2b))+2\pi]/3).
 \ee
 
 
-Numerical calculations using directly integral (\ref{eq:bend2}) lead to dramatic errors, but after making a variable substitution $x = \sqrt{1-R/r}$ the integral can be computed without problems using for example Simpson quadratures. Even though it is not possible to obtain $\alpha$ as an exact function of $\psi$, we can still use the previous equations to form a two-dimensional grid of $\psi$ corresponding to different $\alpha$ and $R$. Then we find the correct $\alpha$ at different phases of the rotation of the star by interpolation. 
+Numerical calculations using directly integral (\ref{eq:bend2}) lead to dramatic errors, but after making a variable substitution $x = \sqrt{1-R/r}$ the integral can be computed without problems using for example Simpson quadratures. Even though it is not possible to obtain $\alpha$ as an exact function of $\psi$, we can still use the previous equations to form a two-dimensional grid of $\psi$ corresponding to different $\alpha$ and $R$. Then we find the correct $\alpha$ at different phases of the rotation of the star by quadratic interpolation. 
 
 
 
@@ -736,10 +736,10 @@ In the case of spectral flux (equation \ref{eq:fluxspot2}) there is no Doppler f
 %Aberration may also change the specific intensity since it has to be computed
 %for angle $\sigma'$ in the comoving frame. 
 
-As mentioned, in the most simple model we may assume that the intensity is independent of $\sigma'$ ("isotropic beaming"). In a little more general case one can assume the intensity to be a product of an angle-dependent ("beaming function") and an energy-dependent function. The beaming function describes what are the directions where most of the intensity is emitted and the function might have e.g. a polynomial shape.  
+As mentioned, in the most simple model we may assume that the intensity is independent of $\sigma'$ ("isotropic beaming"). In a little more general case one can assume the intensity to be a product of an angle-dependent ("beaming function") and an energy-dependent function. The beaming function describes how much intensity is emitted to each direction and the function might have e.g., a polynomial shape.  
 
 
-Thanks to the observed AMXPs (e.g. SAX J1808.4-3658 \cite{poutagierlinskisax}) we know that the spectrum of the pulsar (i.e. the energy-dependence of $I'_{E'}(\sigma')$ ) might be fitted with a blackbody component at lower energies and with a power-law component at higher energies. However in the case of SAX J1808.4-3658 the blackbody contributes only about 30 per cent to the flux even in the 3-5 keV region (which are near the lowest observed energies) \cite{poutagierlinskisax}. Thus we can approximate the spectrum with two different power-laws on both sides of a cut-off energy, which is defined to be at the maximum flux of a blackbody with a temperature of 2 keV (in the frame of the spot). Below the cut-off energy we use Rayleigh-Jeans law and above the cut-off a descending power-law. The power-law is normalized to be equal with the named blackbody at 1 keV. This model of spectrum is shown in the Figure \ref{fig:spectrum}.
+Thanks to the observed AMXPs (e.g., SAX J1808.4-3658 \cite{poutagierlinskisax}) we know that the spectrum of the pulsar (i.e., the energy-dependence of $I'_{E'}(\sigma')$ ) might be fitted with a blackbody component at lower energies and with a power-law component at higher energies. However in the case of SAX J1808.4-3658 the blackbody contributes only about 30 per cent to the flux even in the 3-5 keV region (which is near the lowest observed energies with RXTE) \cite{poutagierlinskisax}. Thus we can approximate the spectrum with two different power-laws on both sides of a cut-off energy, which is defined to be at the maximum flux of a blackbody with a temperature of 2 keV (in the frame of the spot). Below the cut-off energy we use Rayleigh-Jeans law ($I'_{E'}(\sigma') \propto E '^{2}$ and thus $\lambda = -1$) and above the cut-off a descending power-law with the spectral index $\lambda = 1.86$. The power-law is normalized to be equal with the reference blackbody at 1 keV. This spectrum is shown in the Figure \ref{fig:spectrum}.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -751,10 +751,10 @@ Thanks to the observed AMXPs (e.g. SAX J1808.4-3658 \cite{poutagierlinskisax}) w
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-In a more realistic model we would calculate the fluxes using two overlapping spots. The other spot would produce blackbody emission with isotropic beaming and the other one the power-law emission and with e.g. a linear dependence on the beaming angle $\sigma'$ (representing the accretion shock). The spots may have different shapes and sizes. This model will be added to the pulse profile code in the near future.
+In a more realistic model we would calculate the fluxes using two overlapping spots. The other spot would produce blackbody emission with isotropic beaming and the other one the power-law emission with e.g., a linear dependence on the beaming angle $\sigma'$ (representing the accretion shock). The spots may have different shapes and sizes. %This model will be added to the pulse profile code in the near future.
 
 
-In the calculations of this thesis we use spectral number fluxes, since those are the fluxes we get from the observations. We must thus divide the fluxes we get from equation (\ref{eq:fluxspot2}) with the observed energy $E$. When calculating the flux we make again a grid of values of the derivatives $\frac{\d\cos\psi}{\d\cos\alpha}$ (same as $(\frac{\d\cos\alpha}{\d\cos\psi})^{-1}$) with different $\alpha$ and $R$. The derivatives for each point are found by interpolating. 
+In the calculations of this thesis we use monochromatic number fluxes (in units of photons/cm$^{2}$/s/erg), since those are the fluxes we get from the observations. We must thus divide the fluxes we get from equation (\ref{eq:fluxspot2}) with the observed energy $E$. When calculating the flux we make again a grid of values of the derivatives $\frac{\d\cos\psi}{\d\cos\alpha}$ (same as $(\frac{\d\cos\alpha}{\d\cos\psi})^{-1}$) with different $\alpha$ and $R$. The derivatives for each point are found by linear interpolation. 
 
 
 \subsubsection{Time delays}
@@ -762,7 +762,7 @@ In the calculations of this thesis we use spectral number fluxes, since those ar
 
 
 The previous expressions (\ref{eq:fluxspot2}), (\ref{eq:fluxbolo2}) and (\ref{eq:fluxplaw2}) for calculating the flux of an infinitesimal spot
-contain the pulsar phase $\phi$ (e.g. in $\cos\sigma$). However we should realize that photons are not necessarily observed in the same order as they are emitted due to the different light travel times when the position of the emitting spot is different. For this reason the flux actually corresponds to an observed phase $\phiobs$, which is different from $\phi$. The delays between light travel times become significant only for rapidly rotating pulsars. %In Schwarzschild metric the maximum time delay for a neutron star
+contain the pulsar phase $\phi$ expressed in $\cos\sigma$. However we should realize that photons are not necessarily observed in the same order as they are emitted due to the different light travel times when the position of the emitting spot is different. For this reason the flux actually corresponds to an observed phase $\phiobs$, which is different from $\phi$. The delays between light travel times become significant only for rapidly rotating pulsars. %In Schwarzschild metric the maximum time delay for a neutron star
 %of $M=1.4\msun$ is $\Delta t\sim 7\times 10^{-2}$ ms (almost independent
 %of compactness of the star $M/R$). This gives at most 
 %a 5 per cent correction to the arrival phase for a rotational period $P=1.5$~ms.
@@ -772,11 +772,12 @@ contain the pulsar phase $\phi$ (e.g. in $\cos\sigma$). However we should realiz
 %The delay is caused by different travel times of emitted
 %photons to the observer, depending on the position of the emitting spot.
 
-The different light travel times in Schwarzschild metric may be calculated and subtracted to get the time delay between the photon from the point in interest and a photon from a reference point (we call this reference photon). We choose the reference point to locate at a reference radius $r_{\mathrm{ref}}$ from the center of the star (can be chosen arbitrarily as long as it exceeds $\rg$) and assume that the reference photon is emitted exactly to the radial direction (meaning that $\alpha$ = 0 and thus impact parameter $b = 0$). Now a photon following the trajectory with an impact parameter $b$ (and $\alpha < \pi/2$) is lagging the reference photon by 
+The different light travel times in Schwarzschild metric may be calculated and subtracted to get the time delay between the photon from the point of interest and a photon from a reference point (we call this the reference photon). We choose the reference point to locate at a reference radius $r_{\mathrm{ref}}$ from the center of the star (it can be chosen arbitrarily as long as it exceeds $\rg$) and assume that the reference photon is emitted exactly to the radial direction (meaning that $\alpha$ = 0 and thus impact parameter $b = 0$). Now a photon following the trajectory with an impact parameter $b$ (and $\alpha < \pi/2$) is lagging the reference photon by 
 %A photon following the trajectory with an impact parameter $b$ (and $\alpha < \pi/2$)
 %is lagging the photon originating from a reference radius $r_{\mathrm{ref}}$ (which %can be chosen arbitrarily as long as it exceeds $\rg$) with $b=0$ by 
-(Pechenick et al. \cite{pechenick})%\citep{pfc83}:
-:
+%(Pechenick et al. \cite{pechenick})%\citep{pfc83}:
+%:
+\cite{pechenick}
 \be \label{eq:delay2}
 c\Delta t_{p}(R,\alpha)=  c\Delta t_{s}(R,\alpha) -\delta t(r_{\mathrm{ref}},R),
 \ee
@@ -787,7 +788,7 @@ c\Delta t_{s}(R,\alpha) =
 \left\{ \left[ 1-  \frac{b^2}{r^2}  \left( 1- \frac{\rg}{r} \right)
 \right] ^{-1/2}  -1 \right\}
 \ee
-is the time difference between photons originating from the same radius (R) and
+is the time difference between photons originating from the same radius $R$ and
 \be
 \delta t(r_{\mathrm{ref}},R) = R-r_{\mathrm{ref}}+\rg\ln(\frac{R-\rg}{r_{\mathrm{ref}}-\rg})
 \ee
@@ -801,9 +802,9 @@ c\Delta t(R,\alpha)= 2c\Delta t_{s}(p,\pi/2)-c\Delta t_{s}(R,\pi-\alpha)\\+2\lef
 \end{split}
 \ee
 
-The integral in equation (\ref{eq:delayint}) is not very easy to solve numerically. That is why we use again a variable substitution before using Simpson quadrature. We also make a grid of time delays corresponding to different $\alpha$ and $R$, which we later interpolate, to make the code run faster.
+The integral in equation (\ref{eq:delayint}) is not very easy to solve numerically. That is why we use again the variable substitution $x = \sqrt{1-R/r}$ before using Simpson quadrature. We also make a grid of time delays corresponding to different $\alpha$ and $R$, which we later interpolate, to make the code run faster. Linear interpolation is fine here.
 
-We are now able to compute the bending angle $\psi$, the emission angles $\alpha$ and $\sigma$, and the impact parameter $b$ using equations (\ref{eq:bend2}), (\ref{eq:impact2}) and (\ref{eq:cossigma2}) for a given pulsar phase $\phi$. The corresponding delays $\Delta t(R,\alpha)$ or $\Delta t_{p}(R,\alpha)$ we can find using formulae (\ref{eq:delay2}) and (\ref{eq:delay22}). When these time delays are known we compute the delays in phase with 
+We are now able to compute the bending angle $\psi$, the emission angles $\alpha$ and $\sigma$, and the impact parameter $b$ using equations (\ref{eq:bend2}), (\ref{eq:impact2}), and (\ref{eq:cossigma2}) for a given pulsar phase $\phi$. The corresponding delays $\Delta t(R,\alpha)$ or $\Delta t_{p}(R,\alpha)$ we can find using formulae (\ref{eq:delay2}) and (\ref{eq:delay22}). When these time delays are known we compute the delays expressed in phase with 
 %For a given pulsar phase $\phi$, we compute angle $\psi$, then
 %we find the corresponding emitted $\alpha$, $\sigma$ and the impact parameter $b$
 %using  formulae (\ref{eq:bend2}), (\ref{eq:impact2}) and (\ref{eq:cossigma2}), and
@@ -816,12 +817,12 @@ We are now able to compute the bending angle $\psi$, the emission angles $\alpha
 \be \label{eq:deltaphi2}
 \Delta \phi(\phi) =2\pi\nu \Delta t[b(\phi)],
 \ee
-and the arrival phase to the observer is then $\phiobs=\phi+ \Delta\phi$. We have thus created a one-to-one correspondence between $\phi$ and $\phiobs$
+and the arrival phase to the observer is then $\phiobs=\phi+ \Delta\phi$. We may thus construct a one-to-one correspondence between $\phi$ and $\phiobs$
 
-The flux at observed phase $\phiobs$ is
+The flux at the observed phase $\phiobs$ is
 ${F}_{\rm obs}(\phiobs)=F(\phi-\Delta\phi)$ with
 phase delay  $\Delta \phi=2\pi\nu\Delta t$
-calculated using (\ref{eq:delay2}), (\ref{eq:delay22}) and (\ref{eq:deltaphi2}).
+calculated using (\ref{eq:delay2}), (\ref{eq:delay22}), and (\ref{eq:deltaphi2}).
 The contraction (or stretching) of the arrival times of photons is already taken account by one of the Doppler factors in the previous section, so we don't need to multiply flux again by $\delta$. 
 
 %The effect of the photon arrival time contraction (or stretching) on
@@ -834,8 +835,8 @@ The contraction (or stretching) of the arrival times of photons is already taken
 
 In all the previous sections we assumed the spot to be infinitesimally small. If the spot have a finite size we need of course to integrate over the spot surface. It may be done by splitting the spot into a number of small sub-spots and computing the fluxes to each sub-spot separately. Integration over the spot surface is then done using Gaussian quadrature in (cosine of) colatitude and trapezoidal rule for integration over the azimuth inside the spot. 
 
-One important thing is to include the time delays correctly for each sub-spot. Because of this it was a good idea to compute the delays relative to the photons emitted from a point directly under the observer (with $b=0$ as said in the previous section). %miksi juuri b=0 hyvä valinta sub-spottien kannalta?
-A more tricky problem is to find out what is the exact relation between the area of the finite spot in the rotating and non-rotating frames ($\d S=\Dop\ \d S'$ was true for an infinitesimal spot). This problem has still to be studied.
+One important thing is to include the time delays correctly for each sub-spot. Because of this we compute the delays relative to the photons emitted from a point directly under the observer (with $b=0$ as said in the previous section). %miksi juuri b=0 hyvä valinta sub-spottien kannalta?
+A more difficult problem is to find out what is the exact relation between the area of the finite spot in the rotating and non-rotating frames ($\d S=\Dop\ \d S'$ was true for an infinitesimal spot). This problem has still to be studied.
 
 %For a finite size spot, obviously, integration over the spot surface is required. 
 %%I will not write here any formulae as they are rather trivial. 
@@ -853,7 +854,7 @@ In the model in this thesis we assumed a spherically symmetric spot (the angle m
 
 \subsubsection{Comparison of the profiles}
 
-The new versions of the waveform code have been tested by comparing the pulse profiles to profiles obtained from other theoretical models or from a similar model developed by other groups. In the case of spherical star we have checked that the new version gives the same results as the old one (which assumed spherical star and has been shown to give accurate results). In the case of oblate star we have e.g. compared our light curves to those obtained by Morsink \cite{morsink} and Cadeau \cite{cadeau} (model called oblate S+D). The results are shown in Figures \ref{fig:mor3}, \ref{fig:cad3} and \ref{fig:cad4}. They are in good agreement except in cases of some very oblate stars and high bending angles. The profiles of oblate pulsars have also been compared to profiles obtained from light-ray tracing methods (Figures?), which correspond each other well. 
+The new versions of the waveform code have been tested by comparing the pulse profiles to profiles obtained from other theoretical models or from a similar model developed by other groups. In the case of spherical star we have checked that the new version gives the same results as the old one (which assumed spherical star and has been shown to give accurate results). In the case of oblate star we have compared our light curves to those obtained by Morsink \cite{morsink} and Cadeau \cite{cadeau} (model called oblate S+D). The results are shown in Figures \ref{fig:mor3}, \ref{fig:cad3} and \ref{fig:cad4}. They are in good agreement except in cases of some very oblate stars and high bending angles. The profiles of oblate pulsars have also been compared to profiles obtained from light-ray tracing methods (Figures?), which correspond each other well. 
 
 %Show here some profiles..
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
