acknoldgements and eos-mr image

--- a/mythesis.tex
+++ b/mythesis.tex
@@ -153,14 +153,18 @@ from pulse shape modeling}
 	Write here!
 \end{tiivistelma}
 
-
-
+\pagenumbering{gobble}
+\section*{Acknowledgements}
+I would like to thank my supervisors Professor Juri Poutanen and Joonas Nättilä...
+\newpage
 
 \tableofcontents %Sisällysluettelo
 
 \newpage
 
 
+
+\pagenumbering{arabic}
 
 %\pagenumbering{gobble}
 %\section*{Acknowledgement}
@@ -269,6 +273,22 @@ that the speed of sound in dense matter has to be less than the speed of light. 
  R \gtrsim \frac{3GM}{c^{2}}.
  \end{equation} 
 Neutron stars have also a minimum stable neutron star mass, which is about 0.1 $M_{\odot}$ , although the origin of neutron star in a supernova gives a more realistic minimum (on the order of 1.1 $M_{\odot}$) ~\cite{lattimer2013}.
+
+%https://arxiv.org/pdf/1010.5788v1.pdf %add this to reference......somewhere
+ %shapiro 2.0 mass NS...
+ 
+ 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{figure}
+%\centerline{\epsfig{file=oblate_fig.png,width=8.0cm}}
+\centerline{\epsfig{file=eos_mr.png,width=12.0cm}} 
+%or maybe lattimer instead
+\caption{Mass-radius diagram for neutron stars... \cite{lattimer}} 
+\label{fig:eos_mr}
+\end{figure}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
 
 %The Oppenheimer-Volkoff general relativistic equations for a spherically symmetric (non-rotating) neutron star
 
